--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme">
+        android:theme="@style/SmartWardrobe">
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name">
@@ -22,11 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <service
             android:name=".service.WeatherService"
             android:icon="@drawable/ic_launcher"
-            android:exported="true"></service>
+            android:exported="true"/>
         <uses-feature
             android:name="android.hardware.camera"
             android:required="true" />
